pkg/adapter/testdata/gateway-conversion.yaml
apiVersion: fanplane.io/v1alpha1
kind: Gateway
metadata:
  name: falcon
spec:
  listener:
    port: 443
    protocol: HTTPS

  routes:
  - type: CONSUL_DNS
    prefix: /iris/settings/
    service:
      name: ural2
      tag: rc0
    rewrite:
      uri: /promotion/v1/
    connectionPool:
      timeout: 5s
    retryPolicy:
      maxTimeout: 10s
      numRetries: 2
      perTryTimeout: 1s

  - type: CONSUL_DNS
    prefix: /graphql
    service:
      name: data-services
      tag: rc
    retryPolicy:
      numRetries: 2
      perTryTimeout: 1s
    tlsContext:
      sni: rc-data-services.dev.frgcloud.com

  - type: CONSUL_DNS
    prefix: /graphql
    service:
      name: data-services
      tag: rc
    retryPolicy:
      numRetries: 2
      perTryTimeout: 1s

  - type: DNS
    prefix: /flex/v1/keys
    dns:
      fqdn: api.cybersource.com
    retryPolicy:
      numRetries: 2
      perTryTimeout: 500ms
